src/components/Suggestions/Suggestions.scss
@import '../../styles/core-mixins.scss';

.Suggestions {
  position: relative;
  @include flexRow;
  @include flexAlignItemsCenter;
  @include fullHeight;
}

.Suggestions-overlapping-inputs {
  @include flexOn;
  @include flexRowCenter;
  height: 25px;
  position: relative;
}

.Suggestions-search {
  font-size: 14px;
  border: none;
  position: absolute;
  padding-left: 4px;
  padding-right: 20px;
  left: 0;
  width: 100%;
  background: transparent;
  .dark & { color: $zorroa-greyish-brown; }
}

.Suggestions-typeahead {
  //z-index: -1;
  color: $zorroa-lightgray;
  .dark & { color: $zorroa-gray; }
  font-size: 14px;
  border: none;
  position: absolute;
  padding-left: 4px;
  padding-right: 20px;
  left: 0;
  width: 100%;
  background: transparent;
}


// Clear text button
.Suggestions-clear {
  position: absolute;
  right: 0;
  border: none;
  background: none;
  color: $zorroa-gray;
  padding-top: 2px;

  &:hover {
    color: $zorroa-faded-red;
  }

  &:disabled {
    color: transparent;
  }
}

.Suggestions-suggestions {
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  z-index: 1000;

  background-clip: padding-box;
  background-color: rgba(255, 255, 255, 0.85);
  .dark & { background-color: rgba(0,0,0, 0.75); border: 1px solid $zorroa-dimgray; }
  border-radius: 3px;
  border: 1px solid $zorroa-lightgray;
  list-style-type: none;
  margin: 2px 0 0;
  text-align: left;
  box-shadow: 0 4px 10px 0 $zorroa-darkgray;
  min-width: 100%;
}

.Suggestions-suggestion {
  @include flexRow;
  @include flexJustifySpaceBetween;
  @include fullWidth;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  white-space: nowrap;
  min-width: 100%;
  color: $zorroa-darkgray;
  line-height: 1.8;

  .dark & { color: $zorroa-whitegray; }

  &:not(.selected):hover { color: $zorroa-sickly-green; }
  &.selected { background-color: rgba(192, 192, 192, 0.5); }
}

.Suggestions-instructions {
  font-size: 12px;
  font-style: italic;
  color: $zorroa-lightgray;
  padding: 5px 5px 0 5px;
  text-align: center;
  width: 100%;
}

// Magnifying glass
.Suggestions-search-button {
  height: 100%;
  border-radius: 3px;
}

.Suggestions-search-button-label {
  text-transform: uppercase;
  font-size: 12px;
  margin-left: 4px;

  .Suggestions.clear & { display: none; }
}

.Suggestions-search-button-body {
  @include fullHeight;
  @include flexRowCenter;
  font-size: 14px;
  cursor: pointer;
  color: white;
  background-color: $zorroa-darkgray;
  padding-left: 8px;
  padding-right: 8px;
  &:hover { color: $zorroa-gray; }

  .Suggestions.clear & { padding: 0; color: $zorroa-gray; background-color: transparent; }
}

